<resources>
    <string name="app_name">Poster Chernivtsi</string>
    <string name="tab_item_current">Current</string>
    <string name="tab_item_done">Done</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_page">UserPage</string>
    <string name="menu_setings">Settings</string>
    <string name="menu_myAccountPage">My account page</string>
    <string name="upMenu_edit_info">Edit proffile information</string>
    <string name="title_activity_log_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="dummy_button">Dummy Button</string>
    <string name="log_in_title">POSTER CHERNIVTSI</string>
    <string name="log_in">login</string>
    <string name="password">password</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_users_page">UsersPageActivity</string>
    <string name="write_your_message_here">Write text here</string>
    <string name="dialod_message_title">Message</string>
    <string name="menu_main_mypage">My page</string>
    <string name="menu_main_signin">Sign In</string>
    <string name="menu_main_settings">Settings</string>
    <string name="upMenu_save_changes">Save changes</string>
    <string name="fb_api_key">1735947473314954</string>
    <string name="type_e_default">None type</string>
    <string name="type_e_education">Education</string>
    <string name="type_e_sport">Sport</string>
    <string name="type_e_rally">Rally</string>
    <string name="type_e_it_event">IT event</string>
    <string name="type_e_disco_party">Disco party</string>
    <string name="type_e_presentation">Presentation</string>
    <string name="new_event_addToast">New event was successfully added</string>
    <string name="new_event_errorAddToast">Error, try it again</string>
    <string name="new_post_title">Title</string>
    <string name="new_post_add_event">Add event</string>
    <string name="menu_main_add_event">Add event</string>
    <string name="dialog_delete_submit">Delete</string>
    <string name="dialog_delete_cancel">Cancel</string>
    <string name="dialod_delete_title">Delete event</string>
    <string name="dialog_delete_message">A you shure, you want to delete this event?</string>
    <string name="reg_activity_title">Registration</string>
    <string name="reg_activity_name">First name</string>
    <string name="reg_activity_second_name">Second name</string>
    <string name="reg_activity_login">Login</string>
    <string name="reg_activity_password">Password</string>
    <string name="reg_activity_confirm_password">Confirm password</string>
    <string name="reg_activity_birthday">Birthday</string>
    <string name="reg_activity_email">Email</string>
    <string name="reg_activity_about_you">About you</string>
    <string name="reg_activity_required_fields">Required fields</string>
    <string name="logInActivity_log_in_with_twitter">LOG IN WITH Twitter</string>
    <string name="new_user_addToast">You was registered</string>
    <string name="new_user_errorAddToast">Registration error</string>
    <string name="reg_activity_address">Address</string>
    <string name="check_i_c">Check internet connection</string>
    <string name="registration_log_out">Log out</string>
    <string name="newPostActivity_new_post">Enter information</string>
    <string name="new_post_activity_title">New event</string>
    <string name="date_picker_submit">Submit</string>
    <string name="date_picker_choose_date">Choose date</string>
    <string name="tab_item_user_fragment">My Events</string>
    <string name="my_bookmarks">My bookmarks</string>
    <string name="my_posts">My posts</string>
    <string name="admin_login">Admin</string>
    <string name="menu_main_color">Color</string>
    <string name="my_Blue">Blue</string>
    <string name="my_blue">Blue</string>
    <string name="my_green">Green</string>
    <string name="check_internet_connection">Please check internet connection</string>


</resources>
