<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".user_page.UserPageActivity">

    <item
        android:title="@string/menu_main_color"
        android:id="@+id/color_mainActivity"
        android:icon="@drawable/ic_person_24dp"
        app:showAsAction="ifRoom"
        android:visible="false"
        >

        <menu>
            <item
                android:title="@string/my_blue"
                android:id="@+id/log_in_my_bookmarks_mainActivity"
                android:visible="false"/>
            <item
                android:title="@string/my_green"
                android:id="@+id/log_in_my_posts_mainActivity" />
        </menu>

        </item>

</menu>