<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.UserLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:gravity="center">





            <TextView
                android:layout_marginTop="30dp"
                android:id="@+id/fullscreen_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/log_in_title"
                android:textColor="@color/white_"
                android:textSize="30sp"
                android:textStyle="bold" />

                <EditText
                    android:id="@+id/loginActivity_login"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:textSize="10pt"
                    android:gravity="center"
                    android:hint="@string/log_in"
                    android:textColor="@color/white_"
                    android:textColorHint="@color/white_"
                    />

                <EditText
                    android:id="@+id/loginActivity_password"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:textSize="10pt"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/white_"
                    android:textColorHint="@color/white_"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginActivity_login_button"
                    android:textSize="8pt"
                    android:layout_marginTop="5dp"
                    android:text="Log in"
                    android:textStyle="bold"
                    android:textColor="@color/white_"
                    android:background="#026184"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Registration"
                    android:id="@+id/registration_button"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:textColor="@color/white_"
                    android:textSize="8pt"
                    android:background="#026184"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/registration_log_out"
                    android:id="@+id/registration_logout"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:textColor="@color/white_"
                    android:textSize="8pt"
                    android:visibility="gone"
                    android:background="#026184"
                    android:layout_gravity="center"
                    android:gravity="center"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginActivity_admin_login_button"
                android:textSize="8pt"
                android:layout_marginTop="5dp"
                android:text="@string/admin_login"
                android:textStyle="bold"
                android:textColor="@color/white_"
                android:background="#026184"/>
        </LinearLayout>


</RelativeLayout>
